clean test code